<resources>
    <string name="app_name">Custom Video Player</string>
    <string name="openVideoPlayer">Open Video Player</string>
    <string name="close">Close</string>
    <string name="showList">Show List</string>
    <string name="homeTeam">Home Team</string>
    <string name="awayTeam">Away Team</string>
    <string name="hideList">Hide List</string>
    <string name="serviceNotAvailable">Service not available. Please try again later.</string>
</resources>
