<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.murtz.customVideoPlayer.presentation.views.fragment.VideoPlayerFragment">

    <!--Top Bar Screen Buttons-->
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/close" />

        <Button
            android:id="@+id/showListBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginEnd="50dp"
            android:text="@string/showList" />

    </RelativeLayout>

    <!--Video and Overlay Layout-->
    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Exo Player Video View-->
        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/videoPlayerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true" />

        <!--OverlayView-->
        <include
            android:id="@+id/overlayView"
            layout="@layout/teams_view"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>

</LinearLayout>

