<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/round_border_empty"
    android:orientation="horizontal"
    android:weightSum="1">

    <Button
        android:id="@+id/homeTeamBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_fill"
        android:text="@string/homeTeam"
        android:textSize="14sp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/awayTeamBtn"
        android:layout_width="120dp"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border_hollow"
        android:text="@string/awayTeam"
        android:textColor="@android:color/white" />


</LinearLayout>